Add publish activity UI

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,6 +55,7 @@
                 android:layout_height="wrap_content"/>
 
             <Button
+                android:id="@+id/btn_google_login"
                 android:layout_marginTop="24dp"
                 android:text="구글로그인"
                 android:backgroundTint="@android:color/darker_gray"
