--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#ffd31d</color>
     <color name="colorPrimaryDark">#454545</color>
-    <color name="colorAccent">#FF8222</color>
+    <color name="colorAccent">#75CA79</color>
 </resources>
