--- a/app/src/main/res/layout/activity_publish_post.xml
+++ b/app/src/main/res/layout/activity_publish_post.xml
@@ -4,10 +4,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id = "@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.PublishPostActivity"
     >
+
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -51,6 +53,19 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5" />
 
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id = "@+id/loading_drunken_owl"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/drunken_owl" />
 
 <!--    TODO 이미지 가져오고 Firebase 로 업로드하는 처리 필요 -->
     <ImageView
