Editing View holder

--- a/app/src/main/res/layout/post_other_team_view_holder_v2.xml
+++ b/app/src/main/res/layout/post_other_team_view_holder_v2.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/other_team_post_card"
     android:layout_margin="4dp"
     app:cardElevation="6dp"
     android:layout_width="match_parent"
@@ -14,33 +16,49 @@
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_v"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent=".4"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".4" />
 
         <ImageView
             android:id="@+id/other_team_image_view"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/gl_v"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:src="@tools:sample/backgrounds/scenic"
-            android:scaleType="centerCrop"
             android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/gl_v"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@tools:sample/backgrounds/scenic" />
 
         <TextView
             android:id="@+id/tv_other_team_post_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:ellipsize="end"
+            android:maxLines="2"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/gl_v"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="포스트제목" />
+
+        <TextView
+            android:id="@+id/tv_other_team_post_preview"
+            android:layout_width="0dp"
+            android:layout_height="19dp"
             android:layout_margin="16dp"
-            tools:text="포스트제목"
+            android:text="Cotents Here..."
+            android:textColor="#BDBDBD"
             android:maxLines="2"
             android:ellipsize="end"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.108"
+            app:layout_constraintStart_toEndOf="@id/gl_v"
+            app:layout_constraintTop_toBottomOf="@+id/tv_other_team_post_title"
+            app:layout_constraintVertical_bias="0.333" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
