--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -57,7 +57,8 @@
 
     <TextView
         android:id="@+id/post_detail_username"
-        android:text="포스트 작성자"
+        tools:text="포스트 작성자"
+        android:text="익명의 작성자"
         app:layout_constraintTop_toBottomOf="@id/gl_bottom"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="16dp"
@@ -67,13 +68,17 @@
 
     <TextView
         android:id="@+id/post_detail_date"
-        android:text="포스트작성날짜"
+        tools:text="포스트작성날짜"
+        android:text="날짜가 없어요"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toStartOf="@id/gl_v_66"
+        app:layout_constraintBottom_toTopOf="@id/post_detail_content"
         app:layout_constraintStart_toEndOf="@id/gl_v_33"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/gl_bottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_v_33"
@@ -99,8 +104,19 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:textColor="@android:color/black"
-        android:text="포스트 내용 포스트 내용포스트 내용포스트 내용포스트 내용포스트 내용포스트 내용"
+        tools:text="포스트 내용 포스트 내용포스트 내용포스트 내용포스트 내용포스트 내용포스트 내용"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/post_detail_team"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        tools:text="팀이름"
+        android:text="무소속"
+        app:layout_constraintStart_toStartOf="@+id/gl_v_66"
+        app:layout_constraintTop_toTopOf="@+id/gl_bottom" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
