--- a/app/src/main/res/layout/post_view_holder.xml
+++ b/app/src/main/res/layout/post_view_holder.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<com.google.android.material.card.MaterialCardView
+    android:id="@+id/our_team_post_card"
+    app:cardElevation="8dp"
     android:layout_width="300dp"
     android:layout_height="300dp"
-    android:padding="8dp"
+    android:layout_margin="4dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/our_team_post_card"
-        app:cardElevation="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,6 +15,8 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/our_team_image"
+                android:scaleType="centerCrop"
                 android:src="@color/colorPrimaryDark"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -51,5 +50,3 @@
 
 
     </com.google.android.material.card.MaterialCardView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
