--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -37,22 +37,34 @@
         android:layout_height="wrap_content"/>
 
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/rank_view_pager"
-        app:layout_constraintTop_toBottomOf="@id/gl_top"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/gl_center_h"
-        android:layout_width="0dp"
-        android:layout_height="0dp"/>
+    <!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/rv_ranking"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/gl_center_h"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        tools:listitem="@layout/ranking_view_holder"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="0dp"/>-->
+
+<!--    <androidx.viewpager.widget.ViewPager-->
+<!--        android:id="@+id/rank_view_pager"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="0dp"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/gl_top"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/gl_center_h"-->
+<!--        app:layout_constraintHorizontal_bias="0.0"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintVertical_bias="1.0" />-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_ranking"
-        app:layout_constraintTop_toBottomOf="@id/gl_center_h"
+        app:layout_constraintTop_toBottomOf="@id/gl_top"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/ranking_view_holder"
+        android:layout_margin="16dp"
         android:layout_width="0dp"
         android:layout_height="0dp"/>
 
@@ -61,6 +73,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".5" />
+        app:layout_constraintGuide_percent=".8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
